--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "css-mqpacker": "^7.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.15.2"
+    "vuetify": "^0.15.2",
+    "vuex": "^3.6.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
